# kvbenchdocs

./: README.md  bench_kvcache.py  gen_medical_docs.py  manifest.csv  medical_docs_10000.jsonl  parse_corpus.py  pyproject.toml  verify_tokens.py
corpus/: bench.py  build_corpus.py  ed_discharge_summary-10000-1.md  ed_initial_note-10000-0.md  inpatient_progress_note-10000-3.md  lab_result_report-10000-8.md  noise.py  parse.py  specialty_clinical_note-10000-9.md  surgical_preoperative_note-10000-6.md  verify.py
corpus/generators/: __init__.py  legal.py  medical.py  narrative.py
corpus/legal/: doc_0000.txt  doc_0001.txt  doc_0002.txt  doc_0003.txt  doc_0004.txt  doc_0005.txt  doc_0006.txt  doc_0007.txt  doc_0008.txt  doc_0009.txt  doc_0010.txt  doc_0011.txt  doc_0012.txt  doc_0013.txt  doc_0014.txt  legal_docs_10000.jsonl  metadata.json
corpus/medical/: doc_0000.txt  doc_0001.txt  doc_0002.txt  doc_0003.txt  doc_0004.txt  doc_0005.txt  doc_0006.txt  doc_0007.txt  doc_0008.txt  doc_0009.txt  doc_0010.txt  doc_0011.txt  doc_0012.txt  doc_0013.txt  doc_0014.txt  medical_docs_10000.jsonl  metadata.json
docs/: benchmarks.html  corpus-script.js  corpus.html  imaging_report-10000-7.md  index.html  inpatient_medication_reconciliation-10000-4.md  inpatient_progress_note-10000-2.md  outpatient_progress_note-10000-5.md  script.js  styles.css
docs/inference/: index.html
docs/kvcache/: index.html
inference-bench/benchmarks/: compare.sh  latency.sh  quality.sh
inference-bench/evals/: format_compliance.py  pipeline_latency.py  tool_calling.py
site/: index.html  script.js
(+11 files in other folders)
