[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kv-corpus"
version = "0.1.0"
description = "Synthetic document corpus generator for KV cache benchmarking"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "transformers",
    "numpy",
]

[project.optional-dependencies]
viz = ["matplotlib"]

[project.scripts]
build-corpus = "corpus.build_corpus:main"
bench-kvcache = "corpus.bench:cli"
parse-corpus = "corpus.parse:main"
verify-tokens = "corpus.verify:main"

[tool.hatch.build.targets.wheel]
exclude = ["corpus/medical", "corpus/legal"]
